--- a/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/accueil/accueil.component.scss
+++ b/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/accueil/accueil.component.scss
@@ -36,6 +36,8 @@
 .contenu {
     margin-top: 40px;
     padding-top: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
     border-top: 1px solid #eee;
 }
 
@@ -141,4 +143,93 @@ li.ant-menu-item.ant-menu-item-selected {
     &:after {
         content: none;
     }
+}
+
+.stat-icone {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 32px;
+    /* identical to box height, or 133% */
+    /* Pink */
+    text-align: center;
+    color: #F759AB;
+}
+
+.stat-titre {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    padding-top: 20px;
+    /* identical to box height, or 157% */
+    text-align: center;
+    /* Character / Secondary .45 */
+    color: rgba(0, 0, 0, 0.45);
+}
+
+.titre-moyen {
+    /* IBM/bold/28pt */
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 38px;
+    /* identical to box height, or 136% */
+    /* Character/Title .85 */
+    color: rgba(0, 0, 0, 0.85);
+}
+
+.titre-petit {
+    margin-top: 20px;
+    /* IBM/Bold/20 */
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    /* identical to box height, or 120% */
+    display: flex;
+    align-items: center;
+    /* Character/Primary .85 */
+    color: rgba(0, 0, 0, 0.85);
+}
+
+.mois {
+    margin-bottom: 40px;
+}
+
+.mois-infos {
+    margin-top: 20px;
+}
+
+.mois-infos-titre {
+    margin-bottom: 20px;
+    /* IBM/semibold/16pt */
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    /* identical to box height, or 150% */
+    display: flex;
+    align-items: center;
+    /* Character/Title .85 */
+    color: rgba(0, 0, 0, 0.85);
+}
+
+.mois-infos-chiffre {
+    /* IBM/bold/28pt */
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 38px;
+    /* identical to box height, or 136% */
+    display: flex;
+    align-items: center;
+    /* Pink */
+    color: #F759AB;
 }
