--- a/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/clients/clients.component.html
+++ b/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/clients/clients.component.html
@@ -96,7 +96,7 @@
                             <td>{{ data.math }}</td>
                             <td>{{ data.math2 }}</td>
                             <td>
-                                <a routerLink="/evaluations/nouveau">Modifier</a>
+                                <a routerLink="/clients/detail">Modifier</a>
                             </td>
                         </tr>
                     </tbody>
@@ -156,7 +156,7 @@
                             <td>{{ data.math }}</td>
                             <td>{{ data.math2 }}</td>
                             <td>
-                                <a routerLink="/evaluations/nouveau">Modifier</a> &nbsp; &nbsp;
+                                <a routerLink="/clients/detail">Modifier</a> &nbsp; &nbsp;
                                 <a href="#">Prévisualiser</a> &nbsp; &nbsp;
                             </td>
                         </tr>
