--- a/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/consultants/consultants.component.html
+++ b/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/consultants/consultants.component.html
@@ -105,8 +105,8 @@
                             </td>
                             <td>{{ data.english }}</td>
                             <td>
-                                <a routerLink="/evaluations/nouveau">Modifier</a> &nbsp;&nbsp;
-                                <a routerLink="/evaluations/nouveau">Archiver</a> &nbsp;&nbsp;
+                                <a routerLink="/consultants/detail">Modifier</a> &nbsp;&nbsp;
+                                <a routerLink="/consultants/detail">Archiver</a> &nbsp;&nbsp;
                             </td>
                         </tr>
                     </tbody>
@@ -167,8 +167,8 @@
                             <td>{{ data.math2 }}</td>
                             <td>{{ data.english }}</td>
                             <td>
-                                <a routerLink="/evaluations/nouveau">Modifier</a> &nbsp;&nbsp;
-                                <a routerLink="/evaluations/nouveau">Archiver</a> &nbsp;&nbsp;
+                                <a routerLink="/consultants/detail">Modifier</a> &nbsp;&nbsp;
+                                <a routerLink="/consultants/detail">Archiver</a> &nbsp;&nbsp;
                             </td>
                         </tr>
                     </tbody>
