--- a/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/missions/missions.component.html
+++ b/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/missions/missions.component.html
@@ -97,8 +97,8 @@
                             <td>{{ data.math2 }}</td>
                             <td>{{ data.english }}</td>
                             <td>
-                                <a routerLink="/evaluations/nouveau">Modifier</a> &nbsp;&nbsp;
-                                <a routerLink="/evaluations/nouveau">Archiver</a> &nbsp;&nbsp;
+                                <a routerLink="/missions/detail">Modifier</a> &nbsp;&nbsp;
+                                <a routerLink="/missions/detail">Archiver</a> &nbsp;&nbsp;
                             </td>
                         </tr>
                     </tbody>
@@ -159,8 +159,8 @@
                             <td>{{ data.math2 }}</td>
                             <td>{{ data.english }}</td>
                             <td>
-                                <a routerLink="/evaluations/nouveau">Modifier</a> &nbsp;&nbsp;
-                                <a routerLink="/evaluations/nouveau">Archiver</a> &nbsp;&nbsp;
+                                <a routerLink="/missions/detail">Modifier</a> &nbsp;&nbsp;
+                                <a routerLink="/missions/detail">Archiver</a> &nbsp;&nbsp;
                             </td>
                         </tr>
                     </tbody>
