--- a/Documents/Developpement/AngularProjects/temeritati-admin/src/app/app.component.html
+++ b/Documents/Developpement/AngularProjects/temeritati-admin/src/app/app.component.html
@@ -37,13 +37,13 @@
         </a>
     </li>
     <li nz-menu-item style="float: right">
-        <a>
+        <a (click)="conges()">
             <i nz-icon nzType="calendar"></i>
             <span style="margin-left: 8px">Congés</span>
         </a>
     </li>
     <li nz-menu-item style="float: right">
-        <a>
+        <a (click)="factures()">
             <i nz-icon nzType="book"></i>
             <span style="margin-left: 8px">Factures</span>
         </a>
