--- a/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/evaluations/evaluations.component.html
+++ b/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/evaluations/evaluations.component.html
@@ -9,20 +9,32 @@
         </nz-breadcrumb>
         <div class="titre">Évaluations</div>
         <div class="soustitre">
-            Retrouvez ici vos auto-évaluations ainsi que les évaluations de vos managers.
+            Retrouvez ici l’ensemble des évaluations de vos consultants
         </div>
     </div>
 
     <div style="margin-top: 20px">
         <ul nz-menu nzMode="horizontal">
             <li nz-menu-item (click)="selectionner('aSaisir')" [nzSelected]="aSaisir">
-                <span class="menu-design">Auto-évaluation</span>
+                <span class="menu-design">A démarrer</span>
                 <span class="badge">
                     03
                 </span>
             </li>
             <li nz-menu-item (click)="selectionner('enAttente')" [nzSelected]="enAttente">
-                <span class="menu-design">Évaluations</span>
+                <span class="menu-design">En cours</span>
+                <span class="badge">
+                    02
+                </span>
+            </li>
+            <li nz-menu-item (click)="selectionner('rejetees')" [nzSelected]="rejetees">
+                <span class="menu-design">À présenter</span>
+                <span class="badge">
+                    02
+                </span>
+            </li>
+            <li nz-menu-item (click)="selectionner('validees')" [nzSelected]="validees">
+                <span class="menu-design">Finalisée</span>
                 <span class="badge">
                     02
                 </span>
@@ -68,7 +80,7 @@
                 <nz-table #sortTable [nzData]="listOfData" nzTableLayout="fixed">
                     <thead>
                         <tr>
-                            <th style="width: 80px;" [nzChecked]="false"></th>
+
                             <th *ngFor="let column of listOfColumn" [nzSortFn]="column.compare" [nzSortPriority]="column.priority">
                                 <b>
                                     {{ column.title }}
@@ -78,13 +90,13 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let data of sortTable.data">
-                            <td style="width: 80px;" [nzChecked]="false"></td>
+
                             <td>{{ data.name }}</td>
                             <td>{{ data.chinese }}</td>
                             <td>{{ data.math }}</td>
                             <td>{{ data.math2 }}</td>
                             <td>
-                                <a routerLink="/evaluations/nouveau">Modifier</a> &nbsp; &nbsp;
+                                <a routerLink="/evaluations/resume">Évaluer</a> &nbsp; &nbsp;
                                 <a href="#">Prévisualiser</a> &nbsp; &nbsp;
                             </td>
                         </tr>
@@ -129,7 +141,7 @@
                 <nz-table #sortTable [nzData]="listOfData" nzTableLayout="fixed">
                     <thead>
                         <tr>
-                            <th style="width: 80px;" [nzChecked]="false"></th>
+
                             <th *ngFor="let column of listOfColumn" [nzSortFn]="column.compare" [nzSortPriority]="column.priority">
                                 <b>
                                     {{ column.title }}
@@ -139,13 +151,74 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let data of sortTable.data">
-                            <td style="width: 80px;" [nzChecked]="false"></td>
+
                             <td>{{ data.name }}</td>
                             <td>{{ data.chinese }}</td>
                             <td>{{ data.math }}</td>
                             <td>{{ data.math2 }}</td>
                             <td>
-                                <a routerLink="/evaluations/nouveau">Modifier</a> &nbsp; &nbsp;
+                                <a routerLink="/evaluations/resume">Modifier</a> &nbsp; &nbsp;
+                                <a href="#">Prévisualiser</a> &nbsp; &nbsp;
+                            </td>
+                        </tr>
+                    </tbody>
+                </nz-table>
+            </div>
+        </div>
+        <div *ngIf="rejetees">
+            <div style="margin:40px">
+                <div style="margin-bottom:20px">
+                    <div nz-row>
+                        <div nz-col nzSpan="16">
+
+                        </div>
+                        <div nz-col nzSpan="4">
+                            <div>
+                                <nz-input-group nzSearch [nzAddOnAfter]="prefixTemplateUser">
+                                    <input type="text" nz-input placeholder="Rechercher une évaluation" />
+                                </nz-input-group>
+                                <ng-template #prefixTemplateUser>
+                                    <button nz-button nzType="primary" nzSearch>
+                                    <i nz-icon nzType="search"></i>
+                                </button>
+                                </ng-template>
+                            </div>
+                        </div>
+                        <div nz-col nzSpan="4">
+                            <div style="margin-left: 20px">
+                                <nz-input-group nzSearch [nzSuffix]="prefixTemplateUser2">
+                                    <input type="text" nz-input placeholder="Chercher une date" />
+                                </nz-input-group>
+                                <ng-template #prefixTemplateUser2>
+
+                                    <i nz-icon nzType="calendar" style="color: #F759AB"></i>
+
+                                </ng-template>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <nz-table #sortTable [nzData]="listOfDataEnAttente" nzTableLayout="fixed">
+                    <thead>
+                        <tr>
+
+                            <th *ngFor="let column of listOfColumn2" [nzSortFn]="column.compare" [nzSortPriority]="column.priority">
+                                <b>
+                                    {{ column.title }}
+                                </b>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let data of sortTable.data">
+
+                            <td>{{ data.name }}</td>
+                            <td>{{ data.chinese }}</td>
+
+                            <td>{{ data.math2 }}</td>
+                            <td>
+                                <a routerLink="/evaluations/resume">Envoyer</a> &nbsp; &nbsp;
                                 <a href="#">Prévisualiser</a> &nbsp; &nbsp;
                             </td>
                         </tr>
