--- a/Documents/Developpement/AngularProjects/temeritati-admin/src/app/_composants/mois/mois.component.scss
+++ b/Documents/Developpement/AngularProjects/temeritati-admin/src/app/_composants/mois/mois.component.scss
@@ -33,3 +33,15 @@
 .weekend {
     background-color: rgb(245, 245, 245);
 }
+
+.rose {
+    color: #F759AB;
+}
+
+.jaune {
+    color: #F18F01;
+}
+
+.bleu {
+    color: #597EF7;
+}
