--- a/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/clients-detail/clients-detail.component.html
+++ b/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/clients-detail/clients-detail.component.html
@@ -332,9 +332,7 @@
                             <td>{{ data.chinese }}</td>
                             <td>{{ data.math }}</td>
                             <td>
-                                <a routerLink="/cra/detail">Voir</a> &nbsp; &nbsp;
-                                <a href="#">Télécharger</a> &nbsp; &nbsp;
-                                <a href="#">Archiver</a>
+                                <a routerLink="/cra/detail">Modifier</a> &nbsp; &nbsp;
                             </td>
                         </tr>
                     </tbody>
