--- a/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/factures-detail/factures-detail.component.html
+++ b/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/factures-detail/factures-detail.component.html
@@ -95,6 +95,17 @@
                         <nz-input-group>
                             <input type="text" nz-input placeholder="Example" />
                         </nz-input-group>
+
+                        <div style="margin-top: 10px; margin-bottom: 10px;">
+                            <nz-switch [(ngModel)]="switchValue" nzCheckedChildren="Appliquer TVA" nzUnCheckedChildren="Pas de TVA"></nz-switch>
+                        </div>
+
+
+                        <div class="libelle">Montant TTC </div>
+                        <nz-input-group>
+                            <input readonly type="text" nz-input placeholder="Example" />
+                        </nz-input-group>
+
                     </div>
                 </div>
                 <div nz-row [nzGutter]="{ xs: 8, sm: 16, md: 24}" style="margin-top: 40px">
@@ -103,7 +114,7 @@
                         <div class="libelle">
                             Justificatif
                         </div>
-                        <p class="mission-valeur">
+                        <p class="mission-valeur" style="display: none;">
                             <button nz-button>
                                 <i nz-icon nzType="upload"></i>
                                 Importer
@@ -116,67 +127,6 @@
                         </p>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div *ngIf="enAttente">
-            <div style="margin:40px">
-                <div style="margin-bottom:20px">
-                    <div nz-row>
-                        <div nz-col nzSpan="16">
-
-                        </div>
-                        <div nz-col nzSpan="4">
-                            <div>
-                                <nz-input-group nzSearch [nzAddOnAfter]="prefixTemplateUser">
-                                    <input type="text" nz-input placeholder="Rechercher une évaluation" />
-                                </nz-input-group>
-                                <ng-template #prefixTemplateUser>
-                                    <button nz-button nzType="primary" nzSearch>
-                                        <i nz-icon nzType="search"></i>
-                                    </button>
-                                </ng-template>
-                            </div>
-                        </div>
-                        <div nz-col nzSpan="4">
-                            <div style="margin-left: 20px">
-                                <nz-input-group nzSearch [nzSuffix]="prefixTemplateUser2">
-                                    <input type="text" nz-input placeholder="Chercher une date" />
-                                </nz-input-group>
-                                <ng-template #prefixTemplateUser2>
-
-                                    <i nz-icon nzType="calendar" style="color: #F759AB"></i>
-
-                                </ng-template>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <nz-table #sortTable [nzData]="listOfData" nzTableLayout="fixed">
-                    <thead>
-                        <tr>
-                            <th style="width: 80px;" [nzChecked]="false"></th>
-                            <th *ngFor="let column of listOfColumn" [nzSortFn]="column.compare" [nzSortPriority]="column.priority">
-                                <b>
-                                    {{ column.title }}
-                                </b>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let data of sortTable.data">
-                            <td style="width: 80px;" [nzChecked]="false"></td>
-                            <td>{{ data.name }}</td>
-                            <td>{{ data.chinese }}</td>
-                            <td>{{ data.math }}</td>
-                            <td>{{ data.math2 }}</td>
-                            <td>
-                                <a routerLink="/factures/detail">Modifier</a> &nbsp;&nbsp;
-                                <a routerLink="/factures/detail">Archiver</a> &nbsp;&nbsp;
-                            </td>
-                        </tr>
-                    </tbody>
-                </nz-table>
             </div>
         </div>
     </div>
